#877 fix vertical align of logo

--- a/themes/aurora_usa/sass/design/modules/_mega-nav.scss
+++ b/themes/aurora_usa/sass/design/modules/_mega-nav.scss
@@ -86,6 +86,7 @@
     @include float-left;
     font-size: $logo-height-large;
     border-right: 1px solid $gray-med;
+    margin-top: 16px;
     padding-right: 25px;
   }
   .no-font-feature-settings &,
